force-app/main/default/objects/Customer_Service_Case__c/Customer_Service_Case__c.object-meta.xml
<CustomObject>
    <label>Customer Service Case</label>
    <nameField>
        <displayFormat>CSC-{0000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Service Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>